--- a/adminApp/Views/Shared/_Layout.cshtml
+++ b/adminApp/Views/Shared/_Layout.cshtml
@@ -34,6 +34,11 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Timesheet"
                                 asp-action="Index">Timesheet</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="FilesManagement"
+                                asp-action="Index">Files
+                                Management</a>
+                        </li>
                     </ul>
                 </div>
             </div>
